feat: 성능 고도화, 테스트 추가, 문서화

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 /target
 .idea
 .env
+
+# SQLite database files
 sqlite3.db
+sqlite3.db-shm
+sqlite3.db-wal
+
+# macOS
+.DS_Store
+
+# VS Code / Cursor
+.vscode/
+
+# Log files
+*.log
